[gd_scene load_steps=6 format=3 uid="uid://cekayxi6xp5t4"]

[ext_resource type="FontFile" uid="uid://deeij8pwn58ag" path="res://assets/font/Minecraft.ttf" id="1_kl5l6"]
[ext_resource type="Script" path="res://script/node/main_menu/textbutton.gd" id="2_h4vir"]

[sub_resource type="LabelSettings" id="LabelSettings_dsn82"]
line_spacing = 2.0
font = ExtResource("1_kl5l6")
font_size = 24
font_color = Color(0.521569, 0.745098, 0.568627, 1)
outline_size = 10
outline_color = Color(0.270588, 0.156863, 0.235294, 1)
shadow_color = Color(0.231373, 0.368627, 0.423529, 1)
shadow_offset = Vector2(3, 3)

[sub_resource type="LabelSettings" id="LabelSettings_qdkg7"]
line_spacing = 2.0
font = ExtResource("1_kl5l6")
font_size = 24
font_color = Color(0.231373, 0.368627, 0.423529, 1)
outline_size = 10
outline_color = Color(0.270588, 0.156863, 0.235294, 1)
shadow_color = Color(0.231373, 0.368627, 0.423529, 1)
shadow_offset = Vector2(3, 3)

[sub_resource type="LabelSettings" id="LabelSettings_633x6"]
line_spacing = 2.0
font = ExtResource("1_kl5l6")
font_size = 24
font_color = Color(0.756863, 0.984314, 0.580392, 1)
outline_size = 10
outline_color = Color(0.270588, 0.156863, 0.235294, 1)
shadow_color = Color(0.231373, 0.368627, 0.423529, 1)
shadow_offset = Vector2(3, 3)

[node name="textbutton" type="Label"]
anchors_preset = -1
anchor_right = 0.031
anchor_bottom = 0.037
offset_right = -11.16
offset_bottom = -23.68
size_flags_horizontal = 3
mouse_filter = 1
text = "1"
label_settings = SubResource("LabelSettings_dsn82")
script = ExtResource("2_h4vir")
pressed_settings = SubResource("LabelSettings_qdkg7")
hovered_settings = SubResource("LabelSettings_633x6")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
